# search_report

./: Setup.txt  altcode5.py  altcode5.spec  code7.py  code7mod.py  code9.py  main.py  patent_data.xlsx  patent_export_20250903_135711.xlsx  patent_export_20250903_142826.xlsx  patent_export_20250903_145146.xlsx  patent_export_20250903_145238.xlsx  patent_results.xlsx  pyproject.toml  ss.py  ss14.py  ss7.py  ss8.py
altcode/: altcode1.py  altcode2.py  altcode3.py  altcode4.py
code7/: code11.py  code13.py  code7.spec  code8.py  code8mod.py  code9.py
scrap/: google_scrape.py  import.txt  ss10.py  ss11.py  ss12  ss12.py  ss13.py  ss15.py  ss2.py  ss3.py  ss4.py  ss9.py  ssnew1.py  ssnew2.py  ssnew3.py  ssnew4.py  ssnew5.py
spreadsheets/: patent_details.xlsx  patent_export_20250903_142243.xlsx  patent_export_20250903_143851.xlsx  patent_export_20250903_145058.xlsx  patent_export_20250903_145447.xlsx  patent_export_20250903_150447.xlsx  patent_export_20250903_151749.xlsx  patent_export_20250903_151810.xlsx  patent_export_20250903_152410.xlsx  patent_export_20250903_152513.xlsx  patent_export_20250903_152556.xlsx  patent_export_20250903_152656.xlsx  patent_export_20250903_152756.xlsx  patent_export_20250903_160624.xlsx  patent_export_20250903_160951.xlsx  patent_export_20250903_161046.xlsx  patent_export_20250903_161159.xlsx  patent_export_20250903_161301.xlsx  patent_export_20250903_161456.xlsx  patent_export_20250903_161733.xlsx  patent_export_20250903_161822.xlsx  patent_export_20250903_161925.xlsx  patent_export_20250903_162012.xlsx  patent_export_20250903_202625.xlsx  (+11 more)
