[project]
name = "code6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "google-search-results>=2.4.2",
    "lxml>=6.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "playwright>=1.54.0",
    "pywin32>=311",
    "requests>=2.32.5",
    "serpapi>=0.1.5",
    "xlsxwriter>=3.2.5",
]
